--- a/css/oidc_button.css
+++ b/css/oidc_button.css
@@ -3,8 +3,7 @@
 	background-repeat: no-repeat;
 	background-size: contain;
 	height: 20px;
-	width: 20px;
+	width: 40px;
 	display: inline-block;
-	vertical-align: middle;
-	margin-right: 8px;
+	vertical-align: bottom;
 }
